6-Structure, Enum and Union/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
..\main.c: In function 'main':
..\main.c:19:9: error: assignment to expression with array type
  e.name = "Suresh";
         ^

22:28:49 Build Finished (took 208ms)

22:28:49 **** Incremental Build of configuration Debug for project Ex5_find Area of_A_Circle ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:9: error: assignment to expression with array type
  e.name = "Suresh";
         ^
